# Worg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/triangle/: main.c
include/: worg.h
